--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,8 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <color name="black">#FF000000</color>
-    <color name="white">#FFFFFFFF</color>
-    <color name="primary">#00599F</color>
-    <color name="secondary">#8AFF8E</color>
-    <color name="colorAccent">#C2E4FF</color>
+    <color name="white">#ffffff</color>
+    <color name="primary">#00008B</color>
+    <color name="secondary">#800000</color>
 </resources>
