--- a/app/src/main/res/drawable/button_bg.xml
+++ b/app/src/main/res/drawable/button_bg.xml
@@ -1,7 +1,4 @@
 <shape xmlns:android="http://schemas.android.com/apk/res/android">
-    <solid android:color="@android:color/white" />
-    <stroke
-        android:width="1dp"
-        android:color="@android:color/black" />
-    <corners android:radius="30dp" /> <!-- Adjust the radius to control the oval shape -->
+    <solid android:color="@color/primary" />
+    <corners android:radius="10dp" /> <!-- Adjust the radius to control the oval shape -->
 </shape>
