--- a/app/src/main/res/drawable/text_border.xml
+++ b/app/src/main/res/drawable/text_border.xml
@@ -2,6 +2,6 @@
     <solid android:color="#f6f6f6" />
     <stroke
         android:width="1dp"
-        android:color="@color/primary" />
-    <corners android:radius="18dp" /> <!-- Adjust the radius to control the oval shape -->
+        android:color="@color/black" />
+    <corners android:radius="12dp" /> <!-- Adjust the radius to control the oval shape -->
 </shape>
