--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -2,6 +2,10 @@
 <resources>
     <color name="black">#FF000000</color>
     <color name="white">#ffffff</color>
-    <color name="primary">#00008B</color>
-    <color name="secondary">#800000</color>
+    <color name="primary">#7F06F9</color>
+    <color name="secondary">#CE5050</color>
+
+    <color name="gray">#CCCCCC</color>
+    <color name="transparent">@android:color/transparent</color>
+
 </resources>
