--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -7,9 +7,9 @@
     tools:context=".MainActivity">
 
     <ImageView
-        android:layout_width="280dp"
-        android:layout_height="651dp"
-        android:layout_marginBottom="150dp"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginBottom="450dp"
         android:paddingEnd="280dp"
         android:alpha="0.35"
         android:scaleType="center"
