--- a/app/src/main/res/drawable/transparent_bg.xml
+++ b/app/src/main/res/drawable/transparent_bg.xml
@@ -2,6 +2,6 @@
     <solid android:color="@android:color/transparent" />
     <stroke
         android:width="2dp"
-        android:color="#cccccc" />
-    <corners android:radius="10dp" /> <!-- Adjust the radius to control the oval shape -->
+        android:color="@color/linecolor" />
+    <corners android:radius="5dp" /> <!-- Adjust the radius to control the oval shape -->
 </shape>
