--- a/app/src/main/res/layout/activity_withdraw.xml
+++ b/app/src/main/res/layout/activity_withdraw.xml
@@ -1,216 +1,276 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="vertical"
+    android:background="@color/white"
     tools:context=".WithdrawActivity">
 
-    <androidx.appcompat.widget.Toolbar
+    <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:background="@color/primary">
+        android:orientation="vertical">
 
         <TextView
-            android:layout_width="wrap_content"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:fontFamily="@font/lobster_two"
-            android:gravity="center"
+            android:layout_marginHorizontal="20dp"
+            android:layout_marginTop="10dp"
+            android:gravity="center_horizontal"
             android:text="Withdraw Amount"
-            android:textColor="@color/white"
-            android:textSize="24sp"
+            android:textColor="@color/black"
+            android:textSize="22sp"
             android:textStyle="bold" />
 
-    </androidx.appcompat.widget.Toolbar>
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="50dp"
+                android:layout_marginTop="20dp"
+                android:weightSum="2"
+                android:layout_marginHorizontal="20dp"
+                android:background="@drawable/withdrawbal_bg"
+                android:orientation="horizontal">
 
-    <LinearLayout
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="30dp"
-        android:layout_marginEnd="10dp"
-        android:layout_gravity="right"
-        android:background="@drawable/transparent_bg"
-        android:orientation="horizontal">
+                <TextView
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:text="Balance"
+                    android:layout_weight="1"
+                    android:layout_gravity="start|center"
+                    android:gravity="center"
+                    android:textColor="@color/lightwhite"
+                    android:textSize="18sp"
+                    android:layout_marginHorizontal="20dp"/>
 
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="Your Total Coins"
-            android:fontFamily="@font/roboto"
-            android:paddingStart="8dp"
-            android:textSize="16sp"/>
-
-        <ImageView
-            android:layout_width="40dp"
-            android:layout_height="30dp"
-            android:layout_gravity="center"
-            android:paddingLeft="8dp"
-            android:paddingBottom="2dp"
-            android:paddingEnd="2dp"
-            android:src="@drawable/coinimg" />
-
-        <TextView
-            android:id="@+id/myTotal"
-            android:layout_width="wrap_content"
-            android:layout_height="40dp"
-            android:fontFamily="@font/roboto"
-            android:gravity="center"
-            android:paddingBottom="2dp"
-            android:paddingEnd="8dp"
-            android:text="56"
-            android:textSize="20sp" />
-    </LinearLayout>
-
-    <LinearLayout
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="20dp"
-        android:layout_marginStart="10dp"
-        android:orientation="horizontal">
-
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Minimum Redeem Amount : "
-        android:textSize="18sp"
-        android:fontFamily="@font/poppins"
-        android:textStyle="bold"/>
-
-    <TextView
-        android:id="@+id/minRedeem"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="50000"
-        android:paddingStart="5dp"
-        android:textSize="18sp"
-        android:fontFamily="@font/poppins"
-        android:textStyle="bold"/>
-    </LinearLayout>
-
-    <LinearLayout
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginBottom="10dp"
-        android:layout_marginStart="10dp"
-        android:orientation="horizontal">
-
-        <TextView
-            android:id="@+id/conversionAmnt"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="1000"
-            android:textSize="18sp"
-            android:fontFamily="@font/poppins"
-            android:textStyle="bold"/>
+                <TextView
+                    android:id="@+id/myTotal"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:text="25800"
+                    android:layout_weight="1"
+                    android:layout_gravity="end|center"
+                    android:gravity="center"
+                    android:textColor="@color/white"
+                    android:textSize="24sp"
+                    android:textStyle="bold"
+                    android:layout_marginEnd="20dp"/>
+            </LinearLayout>
 
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:paddingStart="5dp"
-            android:text="Points = 1 Rs"
-            android:textSize="18sp"
-            android:fontFamily="@font/poppins"
-            android:textStyle="bold"/>
-    </LinearLayout>
-
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:orientation="vertical"
-        android:padding="8dp"
-        android:layout_margin="10dp"
-        android:background="@drawable/transparent_bg"
-        android:layout_marginTop="20dp">
-
-        <TextView
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:text="Payment Options"
-            android:layout_marginTop="10dp"
-            android:paddingStart="8dp"
-            android:fontFamily="@font/poppins_bold"
+            android:text="Amount"
+            android:layout_marginTop="20dp"
+            android:layout_marginHorizontal="20dp"
             android:textColor="@color/black"
-            android:gravity="center"
             android:textStyle="bold"
-            android:textSize="22sp"/>
-
-        <CheckBox
-            android:id="@+id/razorPay"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="RazorPay"
-            android:textSize="18sp"
-            android:textColor="@color/black"
-            android:fontFamily="@font/roboto"/>
-
-        <CheckBox
-            android:id="@+id/manualPayment"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="Manual Payment"
-            android:textSize="18sp"
-            android:textColor="@color/black"
-            android:fontFamily="@font/roboto"/>
-
-    </LinearLayout>
-
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:orientation="vertical"
-        android:padding="8dp"
-        android:layout_margin="10dp"
-        android:background="@drawable/transparent_bg"
-        android:layout_marginTop="20dp">
-
-        <TextView
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:text="Payment Details"
-            android:layout_marginTop="10dp"
-            android:paddingStart="8dp"
-            android:layout_margin="15dp"
-            android:fontFamily="@font/poppins_bold"
-            android:textColor="@color/black"
-            android:gravity="center"
-            android:textStyle="bold"
-            android:textSize="22sp"/>
-
-        <EditText
-            android:id="@+id/mobileNumber"
-            android:layout_width="match_parent"
-            android:layout_height="48dp"
-            android:background="@drawable/text_border"
-            android:hint="Payment Number"
-            android:drawableLeft="@drawable/baseline_contact_phone_24"
-            android:drawablePadding="10dp"
-            android:paddingStart="10dp"/>
+            android:textSize="18sp"/>
 
         <EditText
             android:id="@+id/withdrawAmnt"
             android:layout_width="match_parent"
             android:layout_height="48dp"
-            android:background="@drawable/text_border"
-            android:hint="Amount To Withdraw"
-            android:drawableLeft="@drawable/baseline_monetization_on_24"
-            android:drawablePadding="10dp"
+            android:layout_marginHorizontal="20dp"
             android:layout_marginTop="10dp"
-            android:paddingStart="10dp"/>
+            android:background="@drawable/text_border"
+            android:drawableEnd="@drawable/baseline_monetization_on_24"
+            android:hint="Amount To Withdraw"
+            android:paddingStart="10dp"
+            android:paddingEnd="15dp"
+            android:textColor="@color/headerblack" />
 
-        <Button
-            android:id="@+id/withdrawSubmitBtn"
-            android:onClick="withdrawSubmitBtnClick"
-            android:layout_width="200dp"
+        <TextView
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_margin="15dp"
-            android:text="Submit"
-            android:fontFamily="@font/roboto"
+            android:text="Withdraw To"
+            android:layout_marginTop="20dp"
+            android:layout_marginHorizontal="20dp"
+            android:textColor="@color/black"
             android:textStyle="bold"
-            android:textSize="16sp"
+            android:textSize="18sp"/>
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:weightSum="2"
+            android:gravity="center"
+            android:layout_marginHorizontal="20dp"
+            android:orientation="horizontal">
+
+            <androidx.cardview.widget.CardView
+                android:id="@+id/razorPay"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                app:cardElevation="4dp"
+                app:cardUseCompatPadding="true"
+                app:cardCornerRadius="15dp"
+                android:background="@drawable/card_bg"
+                android:clickable="true"
+                android:onClick="rpayClicked"
+                android:layout_marginHorizontal="10dp"
+                android:layout_marginTop="8dp"
+                android:layout_marginBottom="8dp"
+                android:layout_weight="1"
+                android:focusable="true">
+
+                <RelativeLayout
+                    android:layout_width="wrap_content"
+                    android:layout_height="match_parent">
+
+                    <ImageView
+                        android:id="@+id/rpaytick"
+                        android:layout_width="20dp"
+                        android:layout_height="20dp"
+                        android:visibility="gone"
+                        android:src="@drawable/check_mark"
+                        android:layout_marginHorizontal="10dp"
+                        android:layout_marginVertical="5dp"
+                        android:layout_alignParentEnd="true"/>
+
+                <LinearLayout
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:orientation="vertical">
+
+                <ImageView
+                    android:layout_width="80dp"
+                    android:layout_height="80dp"
+                    android:scaleType="centerCrop"
+                    android:layout_marginHorizontal="10dp"
+                    android:paddingTop="8dp"
+                    android:layout_gravity="start"
+                    android:src="@drawable/razorpay"/>
+
+                <TextView
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:text="RazorPay"
+                    android:layout_marginHorizontal="10dp"
+                    android:layout_marginBottom="5dp"
+                    android:textColor="@color/headerblack"
+                    android:textStyle="bold"
+                    android:textSize="16sp"/>
+                </LinearLayout>
+                </RelativeLayout>
+            </androidx.cardview.widget.CardView>
+
+            <androidx.cardview.widget.CardView
+                android:id="@+id/manualPayment"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                app:cardElevation="4dp"
+                app:cardUseCompatPadding="true"
+                app:cardCornerRadius="15dp"
+                android:background="@drawable/card_bg"
+                android:onClick="mpayClicked"
+                android:clickable="true"
+                android:layout_marginHorizontal="10dp"
+                android:layout_marginTop="8dp"
+                android:layout_marginBottom="8dp"
+                android:layout_weight="1"
+                android:focusable="true">
+
+                <RelativeLayout
+                    android:layout_width="wrap_content"
+                    android:layout_height="match_parent">
+
+                    <ImageView
+                        android:id="@+id/mpaytick"
+                        android:layout_width="20dp"
+                        android:layout_height="20dp"
+                        android:visibility="gone"
+                        android:src="@drawable/check_mark"
+                        android:layout_marginHorizontal="10dp"
+                        android:layout_marginVertical="5dp"
+                        android:layout_alignParentEnd="true"/>
+
+                    <LinearLayout
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:orientation="vertical">
+
+                        <ImageView
+                            android:layout_width="80dp"
+                            android:layout_height="80dp"
+                            android:layout_gravity="start"
+                            android:layout_marginHorizontal="10dp"
+                            android:paddingTop="8dp"
+                            android:scaleType="centerCrop"
+                            android:src="@drawable/manualpay" />
+
+                        <TextView
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:layout_marginHorizontal="10dp"
+                            android:layout_marginBottom="5dp"
+                            android:text="Manual Pay"
+                            android:textColor="@color/headerblack"
+                            android:textSize="16sp"
+                            android:textStyle="bold" />
+
+                    </LinearLayout>
+                </RelativeLayout>
+            </androidx.cardview.widget.CardView>
+        </LinearLayout>
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Full Name"
+            android:layout_marginTop="20dp"
+            android:layout_marginHorizontal="20dp"
+            android:textColor="@color/headerblack"
+            android:textStyle="bold"
+            android:textSize="16sp"/>
+
+        <EditText
+            android:id="@+id/userName"
+            android:layout_width="match_parent"
+            android:layout_height="48dp"
+            android:layout_marginHorizontal="20dp"
+            android:layout_marginTop="10dp"
+            android:background="@drawable/text_border"
+            android:hint="Enter Your Name"
+            android:inputType="textPersonName"
+            android:paddingStart="10dp"
+            android:paddingEnd="10dp"
+            android:textColor="@color/headerblack" />
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Payment Number"
+            android:layout_marginTop="20dp"
+            android:layout_marginHorizontal="20dp"
+            android:textColor="@color/headerblack"
+            android:textStyle="bold"
+            android:textSize="16sp"/>
+
+        <EditText
+            android:id="@+id/mobileNumber"
+            android:layout_width="match_parent"
+            android:layout_height="48dp"
+            android:layout_marginTop="10dp"
+            android:layout_marginHorizontal="20dp"
+            android:background="@drawable/text_border"
+            android:hint="Enter Your Payment Number"
+            android:paddingStart="10dp"
+            android:paddingEnd="10dp"
+            android:textColor="@color/headerblack" />
+
+        <androidx.appcompat.widget.AppCompatButton
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center_horizontal"
+            android:layout_marginTop="20dp"
+            android:layout_marginHorizontal="30dp"
             android:background="@drawable/button_bg"
-            android:layout_gravity="center_horizontal"/>
-    </LinearLayout>
+            android:textAllCaps="false"
+            android:textColor="@color/white"
+            android:textSize="18sp"
+            android:onClick="withdrawSubmitBtnClick"
+            android:text="Withdraw" />
 
-
-</LinearLayout>
+        </LinearLayout>
+</RelativeLayout>
