--- a/app/src/main/res/drawable/splash_background.xml
+++ b/app/src/main/res/drawable/splash_background.xml
@@ -5,10 +5,10 @@
         android:drawable="@color/white"
         android:left="0dp"
         android:right="0dp"
-        android:top="0dp"></item>
+        android:top="0dp" />
     <item
         android:width="100dp"
         android:height="100dp"
         android:drawable="@drawable/ic_logo"
-        android:gravity="center"></item>
+        android:gravity="center" />
 </layer-list>
